--- a/divelog/templates/divelog/base.html
+++ b/divelog/templates/divelog/base.html
@@ -55,7 +55,7 @@
 
 		<!-- Le javascript
 		<!-- Placed at the end of the document so the pages load faster -->
-		<script src="{{ STATIC_URL }}js/jquery.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 		<script src="{{ STATIC_URL }}vendor/bootstrap/js/bootstrap.js"></script>
 		{% block js %}{% endblock %}
 	</body>
