CSS fix for Google Maps which were mangled by Bootstrap.

--- a/divelog/staticfiles/css/divelog.css
+++ b/divelog/staticfiles/css/divelog.css
@@ -24,6 +24,9 @@ body { padding-top: 60px; }
 
 #location-map { width: 100%; height: 400px; margin: 20px 0 10px 0; }
 
+/* Fix for google maps controls which are mangled by bootstrap. */
+.gmnoprint img { max-width: inherit; }
+
 /* User settings 
 ---------------------------------*/
 .settings-profile { border: 1px solid #e5e5e5; -webkit-border-radius: 6px; -moz-border-radius: 6px; border-radius: 6px; margin: 0 10px 10px 0; padding: 10px; }
