--- a/divelog/templates/divelog/locations/edit.html
+++ b/divelog/templates/divelog/locations/edit.html
@@ -33,7 +33,7 @@
 		</div>
 		<div class="form-actions">
 			<input type="submit" class="btn btn-primary" value="Save" />
-			<a class="btn" href="{% url divelog.views.location_view form.instance.id %}">Cancel</a>
+			<a class="btn" href="{% url divelog_location_view form.instance.id %}">Cancel</a>
 		</div>
 	</fieldset>
 </form>
