--- a/divelog/templates/divelog/locations/view.html
+++ b/divelog/templates/divelog/locations/view.html
@@ -28,7 +28,7 @@
 		<div id="location-map"></div>
 	{% endif %}
 	<div class="pull-right">
-		<a class="btn" href="{% url divelog.views.location_edit location.id %}"><i class="icon-edit"></i> Edit</a>
+		<a class="btn" href="{% url divelog_location_edit location.id %}"><i class="icon-edit"></i> Edit</a>
 	</div>
 {% endblock %}
 
