--- a/divelog/templates/divelog/settings/base.html
+++ b/divelog/templates/divelog/settings/base.html
@@ -12,8 +12,8 @@
 			<div class="clearfix"></div>
 		</div>
 		<ul class="nav nav-list settings-sidenav">
-			<li class="{% active 'divelog.views.settings_account'  %}"><a href="{% url divelog.views.settings_account  %}">Account  <i class="icon-chevron-right"></i></a></li>
-			<li class="{% active 'divelog.views.settings_password' %}"><a href="{% url divelog.views.settings_password %}">Password <i class="icon-chevron-right"></i></a></li>
+			<li class="{% active 'divelog_settings_account'  %}"><a href="{% url divelog_settings_account  %}">Account  <i class="icon-chevron-right"></i></a></li>
+			<li class="{% active 'divelog_settings_password' %}"><a href="{% url divelog_settings_password %}">Password <i class="icon-chevron-right"></i></a></li>
 		</ul>
 	</div>
 	<div class="span8">
