--- a/divelog/templates/divelog/dives/edit.html
+++ b/divelog/templates/divelog/dives/edit.html
@@ -19,7 +19,7 @@
 		{% endfor %}
 		<div class="form-actions">
 			<input type="submit" class="btn btn-primary" value="Save" />
-			<a class="btn" href="{% url divelog.views.dive_view form.instance.id %}">Cancel</a>
+			<a class="btn" href="{% url divelog_dive_view form.instance.id %}">Cancel</a>
 		</div>
 	</fieldset>
 </form>
