--- a/divelog/templates/divelog/base.html
+++ b/divelog/templates/divelog/base.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="utf-8">
+		<meta charset="utf-8" />
 		<title>Django DiveLog</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="">
-		<meta name="author" content="">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="description" content="An online divelog in django." />
+		<meta name="author" content="Ivan Habunek" />
 
-		<link href="{{ STATIC_URL }}vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
-		<link href="{{ STATIC_URL }}css/divelog.css" rel="stylesheet">
+		<link href="{{ STATIC_URL }}vendor/bootstrap/css/bootstrap.css" rel="stylesheet" />
+		<link href="{{ STATIC_URL }}css/divelog.css" rel="stylesheet" />
 		{% block css %}{% endblock %}
 		<!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
 		<!--[if lt IE 9]>
