Replaced remote libs with local ones.
The reason for this is to I can develop from a location with no internet
access. Replaced libs include jquery and highstock.

--- a/divelog/templates/divelog/dives/chart.html
+++ b/divelog/templates/divelog/dives/chart.html
@@ -1,5 +1,5 @@
-<script src="http://code.highcharts.com/stock/highstock.js"></script>
-<script src="http://code.highcharts.com/stock/modules/exporting.js"></script>
+<script src="{{ STATIC_URL }}vendor/highstock/highstock.js"></script>
+<script src="{{ STATIC_URL }}vendor/highstock/modules/exporting.js"></script>
 <script type="text/javascript">
 <!--
 
