--- a/divelog/templates/divelog/locations/edit.html
+++ b/divelog/templates/divelog/locations/edit.html
@@ -1,4 +1,5 @@
 {% extends "divelog/base.html" %}
+{% load bs_forms %}
 
 {% block title %}Edit location{% endblock %}
 
@@ -6,17 +7,11 @@
 <form class="form-horizontal" action="{{ request.get_full_path }}" method="post">
 	{% csrf_token %}
 	<fieldset>
-		{% for field in form %}
-		<div class="control-group{% if field.errors %} error{% endif %}">
-			<label class="control-label" for="id_{{ field.html_name }}">{{ field.label }}</label>
-			<div class="controls">
-				{{ field }}
-				{% for error in field.errors %}
-				<span class="help-inline">{{ error }}</span>
-				{% endfor %}
-			</div>
-		</div>
-		{% endfor %}
+		<legend>Location details</legend>
+		{% bs_field form.name %}
+		{% bs_field form.lon %}
+		{% bs_field form.lat %}
+
 		<div class="control-group">
 			<label class="control-label" >Map</label>
 			<div class="controls">
