Added pressure data to dive samples.
Also added to the chart, plus some minor fiddling with the dive chart.

--- a/divelog/templates/divelog/dives/chart.html
+++ b/divelog/templates/divelog/dives/chart.html
@@ -2,26 +2,48 @@
 <script src="{{ STATIC_URL }}vendor/highstock/modules/exporting.js"></script>
 <script type="text/javascript">
 <!--
+var chart;
 
 var depthSeries = [];
 var tempSeries = [];
+var presSeries = [];
+
+var depthDiffSeries = [];
+var presDiffSeries = [];
+
 var eventSeries = [];
 
+// Rounds number to given precision
+function round(number, precision) {
+	mod = Math.pow(10, precision);
+	return Math.round(number * mod) / mod;
+}
+
 $(document).ready(function() {
-	// Fetch dive samples
+	// Fetch dive samples and assemble chart series
 	var diveReq = $.getJSON('{% url divelog_dive_samples_json dive.id %}', function(data) {
-		for (key in data)
-		{
+		for (key in data) {
 			time = data[key][0] * 1000 // time in ms
 			depthSeries.push([time, -1 * data[key][1]]);
 			tempSeries.push([time, data[key][2]]);
+			presSeries.push([time, data[key][3]])
+
+			if (key > 0) {
+				depthDiff = data[key][1] - data[key-1][1];
+				presDiff  = data[key][3] - data[key-1][3];
+
+				depthDiffSeries.push([time, -1 * round(depthDiff, 2)])
+				presDiffSeries.push([time, -1 * round(presDiff, 2)]);
+			} else {
+				depthDiffSeries.push([time, 0]);
+				depthDiffSeries.push([time, 0]);
+			}
 		}
 	});
 	
 	// Fetch dive events
 	var eventReq = $.getJSON('{% url divelog_dive_events_json dive.id %}', function(data) {
-		for (key in data)
-		{
+		for (key in data) {
 			eventSeries.push({
 				x: data[key][0] * 1000, // time in ms 
 				title: data[key][1]
@@ -35,8 +57,8 @@ $(document).ready(function() {
 	});
 });	
 
-function drawChart() 
-{
+function drawChart() {
+	
 	chart = new Highcharts.StockChart({
 		chart: {
 			renderTo: 'dive_chart',
@@ -44,17 +66,11 @@ function drawChart()
 			marginTop: 50,
 			alignTicks: false,
 		},
-		
 		credits: {
 			enabled: false
 		},
-		
-		navigator: {
-			reversed: true,
-		},
-		
 		rangeSelector: {
-			enabled: false
+			enabled: false,
 		},
 		tooltip: {
 			xDateFormat: '%H:%M:%S'
@@ -67,7 +83,9 @@ function drawChart()
 			}
 		},
 		yAxis: [{
+			title: { text: 'Dive profile' },
 			max: 0,
+			height: 300,
 			labels: {
 				formatter: function() {
 					if (this.value == 0) return '';
@@ -75,11 +93,23 @@ function drawChart()
 				}
 			},
 		},{
+	        title: { text: 'Depth change' },
+	        top: 370,
+	        height: 100,
+	        offset: 0,
+	        lineWidth: 2
+	    },{
 			opposite: true,
+			height: 300,
 			labels: {
-				formatter: function() {
-					return;
-				}
+				formatter: function() { }
+			},
+			gridLineWidth: 0,
+		},{
+			opposite: true,
+			height: 300,
+			labels: { 
+				formatter: function() { }
 			},
 			gridLineWidth: 0,
 		}],
@@ -94,9 +124,14 @@ function drawChart()
 				valueDecimals: 2
 			},
 		},{
+			name: 'Depth change:',
+			type: 'spline',
+			yAxis: 1,
+			data: depthDiffSeries,
+		},{
 			name: 'Temperature',
 			data: tempSeries,
-			yAxis: 1,
+			yAxis: 2,
 			dashStyle: 'LongDash',
 			lineWidth: 1,
 			states: {
@@ -106,6 +141,23 @@ function drawChart()
 			},
 			tooltip: {
 				pointFormat: '<span style="color:{series.color}">{series.name}</span>: <b>{point.y}°C</b><br/>',
+				valueDecimals: 1
+			},
+			connectNulls: true,
+		},{
+			name: 'Pressure',
+			data: presSeries,
+			yAxis: 3,
+			dashStyle: 'LongDash',
+			lineWidth: 1,
+			color: 'green',
+			states: {
+				hover: {
+					lineWidth: 1
+				}
+			},
+			tooltip: {
+				pointFormat: '<span style="color:{series.color}">{series.name}</span>: <b>{point.y} bar</b><br/>',
 				valueDecimals: 1
 			},
 			connectNulls: true,
