--- a/divelog/templates/divelog/dives/view.html
+++ b/divelog/templates/divelog/dives/view.html
@@ -59,7 +59,7 @@
 	{% endif %}
 	
 	{% if dive.size > 0 %}
-		<div id="dive_chart"></div>
+		<div id="dive_chart" style="height: 580px"></div>
 	{% else %}
 		<p>This dive has no profile information.</p>
 	{% endif %}
